@@ -411,12 +411,15 @@ ILboolean ilLoadWbmpL(const void *Lump, ILuint Size);
 ILboolean ilSaveWbmp(ILconst_string FileName);
 ILboolean ilSaveWbmpF(ILHANDLE File);
 ILboolean ilSaveWbmpL(void *Lump, ILuint Size);
-ILboolean ilLoadWdp(ILconst_string FileName);
-ILboolean ilLoadWdpF(ILHANDLE File);
-ILboolean ilLoadWdpL(const void *Lump, ILuint Size);
 ILboolean ilIsValidWdp(ILconst_string FileName);
 ILboolean ilIsValidWdpF(ILHANDLE File);
 ILboolean ilIsValidWdpL(const void *Lump, ILuint Size);
+ILboolean ilLoadWdp(ILconst_string FileName);
+ILboolean ilLoadWdpF(ILHANDLE File);
+ILboolean ilLoadWdpL(const void *Lump, ILuint Size);
+ILboolean ilIsValidXpm(ILconst_string FileName);
+ILboolean ilIsValidXpmF(ILHANDLE File);
+ILboolean ilIsValidXpmL(const void *Lump, ILuint Size);
 ILboolean ilLoadXpm(ILconst_string FileName);
 ILboolean ilLoadXpmF(ILHANDLE File);
 ILboolean ilLoadXpmL(const void *Lump, ILuint Size);
